--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: cicd_test
 
 on: 
   push:
-    branches: 
+    branches:
       - main
   pull_request:
     branches:
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: build
-        run: python pip install -r requirements.txt
-    
+        run: pip install -r requirements.txt
+
       - name: deploy
-        run: python app.py prod
+        run: python app.py
